--- a/conf/app.conf
+++ b/conf/app.conf
@@ -12,5 +12,12 @@ db.prefix = "t_"
 db.timezone = "Asia/Shanghai"
 
 
+# 邮件服务器配置
+mail.from = no-reply@example.com
+mail.host = smtp.example.com
+mail.port = 25
+mail.user = username
+mail.password = your password
+
 # 数据目录设置
-data_dir = /Users/qiucarson/www/go/src/data
+data_dir = /d/go/data
